--- a/code/ui/PlatformerHud.scss
+++ b/code/ui/PlatformerHud.scss
@@ -1,38 +1,35 @@
-Health {
+HealthCurrent {
     position: absolute;
-    font-family: 'Fredoka One';
-    text-stroke: 12px black;
     transform: rotate(-10deg);
-    left: 48px;
-    top: 96px;
-    font-size: 96px;
-    font-weight: bold;
-    color: #3472e6;
-    height: 30px;
+    left: 42px;
+    top: 158px;
+    // height: 30px;
     padding: 0 20px;
-    align-items: center;
     transition: all 0.25s ease-out;
+    flex-direction: row;
 
     .health-block {
-        width: 48px;
-        height: 48px;
+        width: 32px;
+        height: 32px;
         background-color: rgba(black .75);
         border-radius: 50%;
-        border: 8px black;
+        //left: 12px;
+        border: 5px black;
         margin-right: 4px;
+        margin-top: 2px;
 
         .fill {
             opacity: 0;
             width: 100%;
             height: 100%;
-            background-color: #3472e6;
-            transform: scale(0);
+            background-color: #75fd6e;
+            transform: scale(1);
             transition: all .25s linear;
             border-radius: 50%;
         }
 
         &.lowhealth .fill {
-            background-color: hotpink;
+            background-color: #e84118;
         }
 
         &.visible .fill {
@@ -44,30 +41,118 @@ Health {
     label {
 
         &.healthlow {
-            color: hotpink;
+            color: #d63031;
+        }
+    }
+
+    .healthicon {
+        position: absolute;
+        width: 48px;
+        aspect-ratio: 1;
+        top: 1px;
+        left: 64px;
+        filter: tint(hotpink);
+        transform: rotate(20deg);
+
+        &.lowhealthicon {
+            filter: tint(white);
         }
     }
 }
 
-Life {
-    position: absolute;
-    font-family: 'Fredoka One';
-    text-stroke: 12px black;
-    transform: rotate(10deg);
-    right: 96px;
-    top: 96px;
-    font-size: 96px;
-    font-weight: bold;
-    color: #3472e6;
-    height: 30px;
-    padding: 0 20px;
-    align-items: center;
-    transition: all 0.25s ease-out;
 
-    label {
+LifeCurrent {
+    position: absolute;
+    transform: rotate(-10deg);
+    left: 64px;
+    top: 100px;
+    // height: 30px;
+    padding: 0 20px;
+    transition: all 0.25s ease-out;
+    flex-direction: row;
+
+    .lifetext {
+        font-family: 'Fredoka One';
+        text-stroke: 12px black;
+        // transform: rotate(10deg);
+        font-size: 24px;
+        font-weight: bold;
+        color: white;
+        left: 0px;
+        top: 20px;
+        opacity: 1;
+        font-family: 'Fredoka One';
+        font-weight: 500;
+        //  mix-blend-mode: lighten;
+        text-transform: uppercase;
+    }
+
+    .number {
+        font-family: 'Fredoka One';
+        text-stroke: 16px black;
+        transform: rotate(20deg);
+        left: -24px;
+        top: -48px;
+        font-size: 64px;
+        font-weight: bold;
+        color: #fdcb6e;
+        height: 30px;
+        padding: 0 0px;
+        align-items: center;
+        transition: all 0.25s ease-out;
 
         &.lifelow {
-            color: hotpink;
+            color: #ff7675;
+        }
+    }
+
+    .playerimage {
+        position: absolute;
+        width: 108px;
+        aspect-ratio: 1;
+        top: -48px;
+        // background-color: rgba(black 1);
+        border-radius: 50%;
+        border: 6px black;
+    }
+}
+
+Coin {
+    position: absolute;
+    transform: rotate(-10deg);
+    right: 72px;
+    top: 100px;
+    // height: 30px;
+    padding: 0 20px;
+    transition: all 0.25s ease-out;
+    flex-direction: row;
+
+    .coinimage {
+        position: absolute;
+        width: 82px;
+        aspect-ratio: 1;
+        top: -48px;
+        // background-color: rgba(black 1);
+        border-radius: 50%;
+        border: 4px black;
+    }
+
+    .coinnumber {
+        font-family: 'Fredoka One';
+        text-stroke: 16px black;
+        transform: rotate(20deg);
+        left: -38px;
+        top: 12px;
+        font-size: 48px;
+        font-weight: bold;
+        color: #74b9ff;
+        height: 30px;
+        padding: 0 0px;
+        align-items: center;
+        transition: all 0.25s ease-out;
+
+        &.lifelow {
+            color: #ff7675;
         }
     }
 }
