--- a/code/ui/PlatformerHud.scss
+++ b/code/ui/PlatformerHud.scss
@@ -1,42 +1,64 @@
 HealthCurrent {
     position: absolute;
-    transform: rotate(-10deg);
-    left: 42px;
-    top: 158px;
+    //transform: rotate(-10deg);
+    left: -18px;
+    top: -17px;
     // height: 30px;
-    padding: 0 20px;
+    // padding: 0 0px;
     transition: all 0.25s ease-out;
-    flex-direction: row;
+    //flex-direction: column;
+    width: 128px;
+    height: 128px;
+
 
     .health-block {
-        width: 32px;
-        height: 32px;
-        background-color: rgba(black .75);
-        border-radius: 50%;
-        //left: 12px;
-        border: 5px black;
-        margin-right: 4px;
-        margin-top: 2px;
-
-        .fill {
-            opacity: 0;
-            width: 100%;
-            height: 100%;
-            background-color: #75fd6e;
-            transform: scale(1);
-            transition: all .25s linear;
-            border-radius: 50%;
-        }
-
-        &.lowhealth .fill {
-            background-color: #e84118;
-        }
-
-        &.visible .fill {
-            opacity: 1;
-            transform: scale(1);
-        }
+        position: absolute;
+        background-image: url('/ui/hud/circlehud.png');
+        background-repeat: no-repeat;
+        width: 162px;
+        height: 162px;
+        transform-origin: 86% 86%;
+        background-tint: #eb4019;
+        // filter: tint(#7afd72);
+        // transform-origin: bottom right;
     }
+
+    .health-block-0 {
+        transform: scale(.7) rotate(25deg);
+    }
+
+    .health-block-1 {
+        transform: scale(.7) rotate(115deg);
+    }
+
+    .health-block-2 {
+        transform: scale(.7) rotate(205deg);
+    }
+
+    .health-block-3 {
+        transform: scale(.7) rotate(295deg);
+    }
+
+    .fill {
+        // opacity: 0;
+        //width: 100%;
+        // height: 100%;
+        // background-color: #75fd6e;
+        // transform: scale(1);
+        transition: all .25s linear;
+        // border-radius: 100%;
+    }
+
+    .lowhealth {
+        background-tint: red;
+    }
+
+    .visible {
+        background-tint: #7afd72;
+        // opacity: 1;
+        //   transform: scale(1);
+    }
+}
 
     label {
 
@@ -58,14 +80,13 @@ HealthCurrent {
             filter: tint(white);
         }
     }
-}
 
 
 LifeCurrent {
     position: absolute;
     transform: rotate(-10deg);
-    left: 64px;
-    top: 100px;
+    left: 69px;
+    top: 118px;
     // height: 30px;
     padding: 0 20px;
     transition: all 0.25s ease-out;
@@ -91,8 +112,8 @@ LifeCurrent {
         font-family: 'Fredoka One';
         text-stroke: 16px black;
         transform: rotate(20deg);
-        left: -24px;
-        top: -48px;
+        left: 48px;
+        top: 32px;
         font-size: 64px;
         font-weight: bold;
         color: #fdcb6e;
