--- a/code/ui/PlatformerHud.scss
+++ b/code/ui/PlatformerHud.scss
@@ -78,6 +78,7 @@ LifeCurrent {
     width: 108px;
     aspect-ratio: 1;
     top: -48px;
+    left:1.5%;
     border-radius: 50%;
     border: 6px black;
   }
