Show other players when you player entered new area

--- a/code/ui/PlatformerChatBox.scss
+++ b/code/ui/PlatformerChatBox.scss
@@ -102,4 +102,10 @@ platformerchatentry {
             color: #ff80f5;
         }
     }
+
+    &.custom {
+        .name {
+            display: none;
+        }
+    }
 }
