--- a/code/ui/PlatformerKillfeed/PlatformerKillfeed.scss
+++ b/code/ui/PlatformerKillfeed/PlatformerKillfeed.scss
@@ -3,8 +3,8 @@
 
 PlatformerKillfeed {
     position: absolute;
-    top: 100px;
-    right: 64px;
+    top: 200px;
+    left: 0px;
     padding: 20px;
 
     .entries {
@@ -25,17 +25,21 @@ PlatformerKillfeedEntry {
     font-size: 16px;
     height: 32px;
     text-transform: uppercase;
-   // border-bottom: 1px solid transparent;
-   // border-right: 1px solid transparent;
-   // box-shadow: 1px 1px 0 1px black;
+    // border-bottom: 1px solid transparent;
+    // border-right: 1px solid transparent;
+    // box-shadow: 1px 1px 0 1px black;
 
     .name {
-        margin-right: 4px;
+        margin-right:0px;
         color: $secondary;
     }
 
     .message {
-        color:#ffffff;
+        color: #ffffff;
+    }
+
+    .message2 {
+        color: pink;
     }
 
     &.local {
