Added world text entity

--- a/code/ui/PlatformerKillfeed/PlatformerKillfeed.scss
+++ b/code/ui/PlatformerKillfeed/PlatformerKillfeed.scss
@@ -52,6 +52,6 @@ PlatformerKillfeedEntry {
 
     &:outro {
         transform: scale(0);
-        margin-top: -38px;
+        margin-left: -128px;
     }
 }
