--- a/code/ui/NewMajorArea.scss
+++ b/code/ui/NewMajorArea.scss
@@ -7,6 +7,7 @@ NewMajorArea {
     font-weight: 100;
     transition: all .3s ease-out;
     transition: opacity .1s linear;
+    text-transform: uppercase;
 
     &.visible {
         top: 200px;
