--- a/code/ui/PlatformerHud.scss
+++ b/code/ui/PlatformerHud.scss
@@ -155,13 +155,18 @@ CoinCurrent {
 
 KeysCollected {
     position: absolute;
-    top: 260px;
-    left:32px;
-    padding: 0 0px;
+    right: 100px;
+    top: 128px;
+    padding: 4 4px;
     transition: all 0.25s ease-out;
-    flex-direction: row;
+    flex-direction: row-reverse;
     flex-wrap: wrap;
-    width: 300px;
+    min-width:20px;
+    max-width:200px;
+    min-height:20px;
+    max-height:500px;
+    background-color: rgba(255, 255, 255,.02);
+    border-radius: 25px;
 
     KeyPanel {
         opacity: .15;
@@ -180,7 +185,7 @@ KeysCollected {
 
     .key1 {
         //color: #EA2027;
-        padding: 1 1px;
+        padding: 2 6px;
     }
 }
 EnergyCurrent {
