--- a/code/UI/Hud.scss
+++ b/code/UI/Hud.scss
@@ -7,18 +7,6 @@ HealthCurrent {
     height: 196px;
     z-index: 2;
 
-    > .avatar {
-        position: absolute;
-        width: 120px;
-        aspect-ratio: 1;
-        z-index: -1;
-        top: 35px;
-        left: 38px;
-        border-radius: 50%;
-        border: 6px black;
-        transform: rotate(-10deg);
-    }
-
     .health-block {
         position: absolute;
         background-image: url("/ui/hud/circlehud.png");
@@ -57,35 +45,171 @@ HealthCurrent {
     }
 }
 
-LifeCurrent {
+AvatarPanel {
     position: absolute;
-    transform: rotate(-10deg);
-    left: 93px;
-    top: 118px;
-    padding: 0 20px;
+    left: 46px;
+    top: 24px;
     transition: all 0.25s ease-out;
-    flex-direction: row;
+    width: 196px;
+    height: 196px;
     z-index: 2;
 
+    > .avatar {
+        position: absolute;
+        width: 120px;
+        aspect-ratio: 1;
+        z-index: -1;
+        top: 35px;
+        left: 38px;
+        border-radius: 50%;
+        border: 6px black;
+        transform: rotate(-10deg);
+    }
+}
 
-
-    .number {
-        font-family: "Fredoka One";
-        text-stroke: 16px black;
-        transform: rotate(20deg);
-        left: 48px;
-        top: 32px;
-        font-size: 64px;
-        font-weight: bold;
-        color: #f1c40f;
-        height: 30px;
-        padding: 0 0px;
-        align-items: center;
+    LifeCurrent {
+        position: absolute;
+        transform: rotate(-10deg);
+        left: 93px;
+        top: 118px;
+        padding: 0 20px;
         transition: all 0.25s ease-out;
+        flex-direction: row;
+        z-index: 2;
+
+
+
+        .number {
+            font-family: "Fredoka One";
+            text-stroke: 16px black;
+            transform: rotate(20deg);
+            left: 48px;
+            top: 32px;
+            font-size: 64px;
+            font-weight: bold;
+            color: #f1c40f;
+            height: 30px;
+            padding: 0 0px;
+            align-items: center;
+            transition: all 0.25s ease-out;
+            opacity: 0;
+
+            &.lifelow {
+                color: #c0392b;
+            }
+
+            &.Active {
+                opacity: 1;
+            }
+        }
+
+        .playerimage {
+            position: absolute;
+            width: 110px;
+            aspect-ratio: 1;
+            top: -50px;
+            left: -2px;
+            border-radius: 50%;
+            border: 6px black;
+            opacity: 0;
+        }
+    }
+
+    RoundTimer {
+        position: absolute;
+        right: 100px;
+        top: 48px;
+        width: 175px;
+        height: 60px;
+        margin: 0px 2px;
+        transition: all 0.6s ease-in-out;
+        margin-top: 10px;
+        font-family: poppins;
+        background-color: rgb(255, 255, 255);
+        border-radius: 50px;
+
+
+        .game-icon {
+            width: 60px;
+            height: 60px;
+        }
+
+        .game-state {
+            bottom: 12px;
+            width: 96px;
+            height: 60px;
+            font-size: 16px;
+            color: #607D8B;
+            font-family: Poppins;
+            font-weight: 800;
+            text-transform: uppercase;
+            align-items: center;
+        }
+
+        .game-timer {
+            position: absolute;
+            font-size: 24px;
+            color: #607D8B;
+            font-family: Poppins;
+            font-weight: 800;
+            text-transform: uppercase;
+            left: 65px;
+            right: 0;
+            bottom: 0%;
+        }
+    }
+
+    CourseTimer {
+        position: absolute;
+        top: 145px;
+        left: 225px;
+        text-stroke: 11px black;
+        font-size: 20px;
+        font-family: Poppins;
+        font-weight: 800;
+        color: white;
         opacity: 0;
 
-        &.lifelow {
-            color: #c0392b;
+        &.Active {
+            opacity: 1;
+        }
+    }
+
+    CoinCurrent {
+        position: absolute;
+        transform: rotate(-10deg);
+        left: 200px;
+        top: 65px;
+        padding: 0 0px;
+        transition: all 0.25s ease-out;
+        flex-direction: row;
+        z-index: 2;
+        opacity: 0;
+
+        .coinimage {
+            position: absolute;
+            width: 65px;
+            aspect-ratio: 1;
+            top: -48px;
+            left: 1.5%;
+            border-radius: 50%;
+            border: 4px black;
+        }
+
+        .coinnumber {
+            position: absolute;
+            font-family: "Fredoka One";
+            text-stroke: 16px black;
+            transform: rotate(20deg);
+            left: 45px;
+            top: 2px;
+            font-size: 48px;
+            font-weight: bold;
+            color: #f1c40f;
+            height: 30px;
+            padding: 0 0px;
+            align-items: center;
+            transition: all 0.25s ease-out;
         }
 
         &.Active {
@@ -93,143 +217,93 @@ LifeCurrent {
         }
     }
 
-    .playerimage {
+    KeysCollected {
         position: absolute;
-        width: 110px;
-        aspect-ratio: 1;
-        top: -50px;
-        left: -2px;
-        border-radius: 50%;
-        border: 6px black;
-        opacity: 0;
-    }
-}
-
-RoundTimer {
-    position: absolute;
-    right: 100px;
-    top: 48px;
-    width: 175px;
-    height: 60px;
-    margin: 0px 2px;
-    transition: all 0.6s ease-in-out;
-    margin-top: 10px;
-    font-family: poppins;
-    background-color: rgb(255, 255, 255);
-    border-radius: 50px;
+        right: 105px;
+        top: 128px;
+        padding: 1 1px;
+        transition: all 0.25s ease-out;
+        flex-direction: row-reverse;
+        flex-wrap: wrap;
+        min-width: 50px;
+        max-width: 400px;
+        min-height: 50px;
+        max-height: 500px;
 
 
-    .game-icon {
-        width: 60px;
-        height: 60px;
-    }
+        KeyPanel {
+            margin: 2;
+            opacity: .2;
+            aspect-ratio: 1;
+            // transform: rotate(20deg);
+            padding-left: 10px;
+            color: #3498db;
+            transition: all 0.25s ease-out;
 
-    .game-state {
-        bottom: 12px;
-        width: 96px;
-        height: 60px;
-        font-size: 16px;
-        color: #607D8B;
-        font-family: Poppins;
-        font-weight: 800;
-        text-transform: uppercase;
-        align-items: center;
+
+            &.Active {
+                opacity: 1;
+                background-image-tint: white;
+            }
+        }
+
+        .key1 {
+            opacity: .2;
+            padding: 2 6px;
+            background-image-tint: #212121;
+        }
     }
 
-    .game-timer {
-        position: absolute;
-        font-size: 24px;
-        color: #607D8B;
-        font-family: Poppins;
-        font-weight: 800;
-        text-transform: uppercase;
-        left: 65px;
-        right: 0;
-        bottom: 0%;
-    }
-}
-
-CourseTimer {
-    position: absolute;
-    top: 145px;
-    left: 225px;
-    text-stroke: 11px black;
-    font-size: 20px;
-    font-family: Poppins;
-    font-weight: 800;
-    color: white;
-    opacity: 0;
-
-    &.Active {
-        opacity: 1;
-    }
-}
-
-CoinCurrent {
-    position: absolute;
-    transform: rotate(-10deg);
-    left: 200px;
-    top: 65px;
-    padding: 0 0px;
-    transition: all 0.25s ease-out;
-    flex-direction: row;
-    z-index: 2;
-    opacity: 0;
-
-    .coinimage {
-        position: absolute;
-        width: 65px;
-        aspect-ratio: 1;
-        top: -48px;
-        left: 1.5%;
-        border-radius: 50%;
-        border: 4px black;
-    }
-
-    .coinnumber {
-        position: absolute;
+    EnergyCurrent {
+        color: #fff;
         font-family: "Fredoka One";
-        text-stroke: 16px black;
-        transform: rotate(20deg);
-        left: 45px;
-        top: 2px;
-        font-size: 48px;
-        font-weight: bold;
-        color: #f1c40f;
-        height: 30px;
-        padding: 0 0px;
-        align-items: center;
-        transition: all 0.25s ease-out;
-    }
+        flex-direction: column;
+        //justify-content: center;
+        position: absolute;
+        left: 210px;
+        top: 12.45%;
+        width: 200px;
+        opacity: 0;
 
-    &.Active {
-        opacity: 1;
-    }
-}
+        .energynm {
+            font-family: "Fredoka One";
+            text-stroke: 14px black;
+            font-size: 24px;
+            font-weight: bold;
+            position: absolute;
+            bottom: 32px;
+            left: 96px;
+            right: 0;
+            width: auto;
+            height: 24px;
+            transform-origin: 50%,50%;
+            transition: all 0.25s ease-out;
+        }
 
-KeysCollected {
-    position: absolute;
-    right: 105px;
-    top: 128px;
-    padding: 1 1px;
-    transition: all 0.25s ease-out;
-    flex-direction: row-reverse;
-    flex-wrap: wrap;
-    min-width: 50px;
-    max-width: 400px;
-    min-height: 50px;
-    max-height: 500px;
+        .energy {
+            background-color: yellow;
+            position: absolute;
+            opacity: .75;
+            bottom: 0px;
+            left: 0;
+            right: 0;
+            width: auto;
+            height: 24px;
+            transform-origin: 50%,50%;
+            transition: all 0.25s ease-out;
+        }
 
-
-    KeyPanel {
-        margin: 2;
-        opacity: .2;
-        aspect-ratio: 1;
-        // transform: rotate(20deg);
-        padding-left: 10px;
-        color: #3498db;
-        transition: all 0.25s ease-out;
-
+        .energybg {
+            background-color: rgb(150, 150, 150,.25);
+            position: absolute;
+            border: 4px black;
+            bottom: 0px;
+            left: 0px;
+            right: 0;
+            width: auto;
+            height: 24px;
+            transform-origin: 50%,50%;
+        }
 
         &.Active {
             opacity: 1;
@@ -237,100 +311,36 @@ KeysCollected {
         }
     }
 
-    .key1 {
-        opacity: .2;
-        padding: 2 6px;
-        background-image-tint: #212121;
-    }
-}
-
-EnergyCurrent {
-    color: #fff;
-    font-family: "Fredoka One";
-    flex-direction: column;
-    //justify-content: center;
-    position: absolute;
-    left: 210px;
-    top: 12.45%;
-    width: 200px;
-    opacity: 0;
-
-    .energynm {
-        font-family: "Fredoka One";
-        text-stroke: 14px black;
-        font-size: 24px;
-        font-weight: bold;
+    DeathUI {
         position: absolute;
-        bottom: 32px;
-        left: 96px;
-        right: 0;
-        width: auto;
-        height: 24px;
-        transform-origin: 50%,50%;
-        transition: all 0.25s ease-out;
-    }
-
-    .energy {
-        background-color: yellow;
-        position: absolute;
-        opacity: .75;
-        bottom: 0px;
-        left: 0;
-        right: 0;
-        width: auto;
-        height: 24px;
-        transform-origin: 50%,50%;
-        transition: all 0.25s ease-out;
-    }
-
-    .energybg {
-        background-color: rgb(150, 150, 150,.25);
-        position: absolute;
-        border: 4px black;
-        bottom: 0px;
-        left: 0px;
-        right: 0;
-        width: auto;
-        height: 24px;
-        transform-origin: 50%,50%;
-    }
-
-    &.Active {
-        opacity: 1;
-        background-image-tint: white;
-    }
-}
-
-DeathUI {
-    position: absolute;
-    left: 47.5%;
-    top: 45.5%;
-    width: 100px;
-    height: 100px;
-    aspect-ratio: 0;
-    //  background-image: url("/ui/hud/death/respawn.png");
-    background-size: cover;
-    z-index: -1;
+        left: 47.5%;
+        top: 45.5%;
+        width: 100px;
+        height: 100px;
+        aspect-ratio: 0;
+        //  background-image: url("/ui/hud/death/respawn.png");
+        background-size: cover;
+        z-index: -1;
 
 
-    .deathimage {
+        .deathimage {
 
-        &.alive {
-            transform: scale(50);
-            transition: all .2s ease-in;
-            opacity: 0;
-        }
+            &.alive {
+                transform: scale(50);
+                transition: all .2s ease-in;
+                opacity: 0;
+            }
 
-        &.limbo {
-            transform: scale(15);
-            transition: all 1s ease-in-out;
-            opacity: 1;
-        }
+            &.limbo {
+                transform: scale(15);
+                transition: all 1s ease-in-out;
+                opacity: 1;
+            }
 
-        &.died {
-            transform: scale(.1 );
-            transition: all 1s ease-out;
-            opacity: 1;
+            &.died {
+                transform: scale(.1 );
+                transition: all 1s ease-out;
+                opacity: 1;
+            }
         }
     }
-}
