Clean up obsoletes

--- a/code/UI/Base/Chatbox/PlatformerChatBox.scss
+++ b/code/UI/Base/Chatbox/PlatformerChatBox.scss
@@ -60,9 +60,8 @@ platformerchatentry {
         transform: scale( 0 );
     }
 
-    &:outro {
+    &.faded {
         opacity: 0;
-        transition: all 2s ease-out;
     }
 
     image {
