--- a/code/UI/_vars.scss
+++ b/code/UI/_vars.scss
@@ -15,3 +15,8 @@ $stylefont: 'Fredoka One';
 $readingfont: 'Fredoka One';
 $green: #4cb74c;
 $red: #ba2828;
+
+$BGCream: #FBF7F1;
+$NearBlack: #13191b;
+$BGTxtFade: #b6b2a4;
+$BGButton: #4cc5d6;
