--- a/code/UI/Tag/TagHud.scss
+++ b/code/UI/Tag/TagHud.scss
@@ -35,13 +35,13 @@ TagScore {
         align-items: center;
         padding: 5px 15px;
         font-size: 22px;
-        box-shadow: 0px 4px 4px rgba(0,0,0,.5);
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.05);
 
         .heading {
             font-weight: 800;
             text-transform: uppercase;
             color: #87857e;
-            text-shadow: 0px 2px 0px rgba(#FFFFFF, 1);
+            text-shadow: 0px 1px 0px #FFFFFF;
         }
 
         .amount {
@@ -49,11 +49,11 @@ TagScore {
             color: #13191b;
             font-weight: 800;
             text-transform: uppercase;
-            text-shadow: 0px 2px 0px rgba(#FFFFFF, 1);
+            text-shadow: 0px 1px 0px #FFFFFF;
         }
 
         &.not-tagged {
-            background: linear-gradient(0deg, #FFF3E0E5 0%, #FFFFFFE5 100%);
+            background: linear-gradient(60deg, rgba(255, 243, 224, 0.9) 0%, rgba(255, 255, 255, 0.9) 100%);
             margin-right: 10px;
 
             label {
@@ -61,7 +61,7 @@ TagScore {
         }
 
         &.tagged {
-            background: linear-gradient(0deg, #FFF3E0E5 0%, #FFFFFFE5 100%);
+            background: linear-gradient(60deg, rgba(255, 243, 224, 0.9) 0%, rgba(255, 255, 255, 0.9) 100%);
 
             label {
             }
