--- a/code/UI/Hud.scss
+++ b/code/UI/Hud.scss
@@ -67,149 +67,35 @@ AvatarPanel {
     }
 }
 
-    LifeCurrent {
-        position: absolute;
-        transform: rotate(-10deg);
-        left: 93px;
-        top: 118px;
-        padding: 0 20px;
-        transition: all 0.25s ease-out;
-        flex-direction: row;
-        z-index: 2;
+LifeCurrent {
+    position: absolute;
+    transform: rotate(-10deg);
+    left: 93px;
+    top: 118px;
+    padding: 0 20px;
+    transition: all 0.25s ease-out;
+    flex-direction: row;
+    z-index: 2;
 
 
 
-        .number {
-            font-family: "Fredoka One";
-            text-stroke: 16px black;
-            transform: rotate(20deg);
-            left: 48px;
-            top: 32px;
-            font-size: 64px;
-            font-weight: bold;
-            color: #f1c40f;
-            height: 30px;
-            padding: 0 0px;
-            align-items: center;
-            transition: all 0.25s ease-out;
-            opacity: 0;
-
-            &.lifelow {
-                color: #c0392b;
-            }
-
-            &.Active {
-                opacity: 1;
-            }
-        }
-
-        .playerimage {
-            position: absolute;
-            width: 110px;
-            aspect-ratio: 1;
-            top: -50px;
-            left: -2px;
-            border-radius: 50%;
-            border: 6px black;
-            opacity: 0;
-        }
-    }
-
-    RoundTimer {
-        position: absolute;
-        right: 100px;
-        top: 48px;
-        width: 175px;
-        height: 60px;
-        margin: 0px 2px;
-        transition: all 0.6s ease-in-out;
-        margin-top: 10px;
-        font-family: poppins;
-        background-color: rgb(255, 255, 255);
-        border-radius: 50px;
-
-
-        .game-icon {
-            width: 60px;
-            height: 60px;
-        }
-
-        .game-state {
-            bottom: 12px;
-            width: 96px;
-            height: 60px;
-            font-size: 16px;
-            color: #607D8B;
-            font-family: Poppins;
-            font-weight: 800;
-            text-transform: uppercase;
-            align-items: center;
-        }
-
-        .game-timer {
-            position: absolute;
-            font-size: 24px;
-            color: #607D8B;
-            font-family: Poppins;
-            font-weight: 800;
-            text-transform: uppercase;
-            left: 65px;
-            right: 0;
-            bottom: 0%;
-        }
-    }
-
-    CourseTimer {
-        position: absolute;
-        top: 145px;
-        left: 225px;
-        text-stroke: 11px black;
-        font-size: 20px;
-        font-family: Poppins;
-        font-weight: 800;
-        color: white;
-        opacity: 0;
-
-        &.Active {
-            opacity: 1;
-        }
-    }
-
-    CoinCurrent {
-        position: absolute;
-        transform: rotate(-10deg);
-        left: 200px;
-        top: 65px;
+    .number {
+        font-family: "Nunito-Black";
+        text-stroke: 16px black;
+        transform: rotate(20deg);
+        left: 48px;
+        top: 32px;
+        font-size: 64px;
+        font-weight: bold;
+        color: #f1c40f;
+        height: 30px;
         padding: 0 0px;
+        align-items: center;
         transition: all 0.25s ease-out;
-        flex-direction: row;
-        z-index: 2;
         opacity: 0;
 
-        .coinimage {
-            position: absolute;
-            width: 65px;
-            aspect-ratio: 1;
-            top: -48px;
-            left: 1.5%;
-            border-radius: 50%;
-            border: 4px black;
-        }
-
-        .coinnumber {
-            position: absolute;
-            font-family: "Fredoka One";
-            text-stroke: 16px black;
-            transform: rotate(20deg);
-            left: 45px;
-            top: 2px;
-            font-size: 48px;
-            font-weight: bold;
-            color: #f1c40f;
-            height: 30px;
-            padding: 0 0px;
-            align-items: center;
-            transition: all 0.25s ease-out;
+        &.lifelow {
+            color: #c0392b;
         }
 
         &.Active {
@@ -217,44 +103,164 @@ AvatarPanel {
         }
     }
 
-    KeysCollected {
+    .playerimage {
         position: absolute;
-        right: 105px;
-        top: 128px;
-        padding: 1 1px;
+        width: 110px;
+        aspect-ratio: 1;
+        top: -50px;
+        left: -2px;
+        border-radius: 50%;
+        border: 6px black;
+        opacity: 0;
+    }
+}
+
+RoundTimer {
+    position: absolute;
+    right: 45%;
+    top: 48px;
+    width: 175px;
+    height: 60px;
+    //margin: 0px 2px;
+    transition: all 0.6s ease-in-out;
+    margin-top: 10px;
+    font-family: "Nunito-Black";
+    background-color: rgb(255, 255, 255);
+    border-radius: 50px;
+    align-items: center;
+
+    .game-icon {
+        width: 60px;
+        height: 60px;
+    }
+
+    .game-state {
+        bottom: 12px;
+        width: 96px;
+        height: 60px;
+        font-size: 16px;
+        color: #607D8B;
+        font-family: "Nunito-Black";
+        font-weight: 800;
+        text-transform: uppercase;
+        align-items: center;
+    }
+
+    .game-timer {
+        position: absolute;
+        font-size: 24px;
+        color: #607D8B;
+        font-family: "Nunito-Black";
+        font-weight: 800;
+        text-transform: uppercase;
+        left: 65px;
+        right: 0;
+        bottom: 0%;
+    }
+}
+
+CourseTimer {
+    position: absolute;
+    top: 145px;
+    left: 225px;
+    text-stroke: 11px black;
+    font-size: 20px;
+    font-family: "Nunito-Black";
+    font-weight: 800;
+    color: white;
+    opacity: 0;
+
+    &.Active {
+        opacity: 1;
+    }
+}
+
+CoinCurrent {
+    position: absolute;
+    transform: rotate(-10deg);
+    left: 200px;
+    top: 65px;
+    padding: 0 0px;
+    transition: all 0.25s ease-out;
+    flex-direction: row;
+    z-index: 2;
+    opacity: 0;
+
+    .coinimage {
+        position: absolute;
+        width: 65px;
+        aspect-ratio: 1;
+        top: -48px;
+        left: 1.5%;
+        border-radius: 50%;
+        border: 4px black;
+    }
+
+    .coinnumber {
+        position: absolute;
+        font-family: "Nunito-Black";
+        text-stroke: 4px black;
+        transform: rotate(20deg);
+        left: 45px;
+        top: 2px;
+        font-size: 48px;
+        font-weight: bold;
+        color: #f1c40f;
+        height: 30px;
+        padding: 0 0px;
+        align-items: center;
         transition: all 0.25s ease-out;
-        flex-direction: row-reverse;
-        flex-wrap: wrap;
-        min-width: 50px;
-        max-width: 400px;
-        min-height: 50px;
-        max-height: 500px;
+    }
+
+    &.Active {
+        opacity: 1;
+    }
+}
+
+KeysCollected {
+    position: absolute;
+    right: 50px;
+    top: 50px;
+    padding: 1 1px;
+    transition: all 0.25s ease-out;
+    flex-direction: row-reverse;
+    flex-wrap: wrap;
+    min-width: 50px;
+    max-width: 600px;
+    min-height: 50px;
+    max-height: 500px;
 
 
-        KeyPanel {
-            margin: 2;
-            opacity: .2;
-            aspect-ratio: 1;
-            // transform: rotate(20deg);
-            padding-left: 10px;
-            color: #3498db;
-            transition: all 0.25s ease-out;
+    KeyPanel {
+        font-family: "Material Icons";
+        margin: 2;
+        opacity: 1;
+        align-items: center;
+        text-align: center;
+        font-size: 42;
+        border-radius: 100%;
+        transform: rotate(-45deg);
+        padding-left: 10px;
+        color: rgba(255, 243, 224, .6);
+        transition: all 0.25s ease-out;
+        background-color: rgba(0, 0, 0, 0.3);
+        width: 52px;
+        height: 52px;
 
-
-            &.Active {
-                opacity: 1;
-                background-image-tint: white;
-            }
-        }
-
-        .key1 {
-            opacity: .2;
-            padding: 2 6px;
-            background-image-tint: #212121;
+        &.Active {
+            opacity: 1;
+            color: rgba(255, 243, 224, 0.96);
+            background-color: rgba(234, 46, 80, 0.8);
         }
     }
 
-    EnergyCurrent {
+    .key1 {
+        opacity: .1;
+        padding: 2 6px;
+    }
+}
+
+EnergyCurrent {
         color: #fff;
         font-family: "Fredoka One";
         flex-direction: column;
@@ -311,7 +317,7 @@ AvatarPanel {
         }
     }
 
-    DeathUI {
+DeathUI {
         position: absolute;
         left: 47.5%;
         top: 45.5%;
