--- a/code/UI/Hud.scss
+++ b/code/UI/Hud.scss
@@ -254,6 +254,12 @@ DeathUI {
     }
 }
 
+defaulthud {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
 .head {
     position: absolute;
     width: 100%;
