Don't show coins/lives in Tag

--- a/code/UI/Base/PlayerInfo/PlayerCard.scss
+++ b/code/UI/Base/PlayerInfo/PlayerCard.scss
@@ -27,6 +27,11 @@ PlayerCard {
                 margin-left: 60px;
             }
 
+
+            &.tag {
+                opacity: 0;
+            }
+
             > .icon {
                 font-family: Material Icons;
                 color: #87857e;
