Add logo, restyled hints (remove later) https://files.facepunch.com/devultj/1b2511b1/sbox-dev_Y91hsWdMZL.png

--- a/code/UI/Base/Controls/ControlPanel.scss
+++ b/code/UI/Base/Controls/ControlPanel.scss
@@ -4,18 +4,19 @@
 ControlPanel {
     color: $fontcolor;
     position: absolute;
-    bottom: 64px;
-    right: 40%;
+    bottom: 32px;
+    left: 32px;
     align-items: flex-end;
     z-index: 101;
     flex-direction: column;
-    font-family: Nunito-Black;
+    font-family: Nunito-Bold;
     opacity: 0;
     transition: all .15s ease-in;
-    align-items: center;
-    color: #87857e;
-    text-shadow: 0px 1px 0px #FFFFFF;
+    align-items: start;
+    color: #b7b7b7;
+    text-shadow: 0px 1px 0px rgba( black, 0.3 );
     font-size: 16px;
+    border-left: 2px solid rgba(234, 46, 80, 1);
 
     &.open {
         opacity: 1;
@@ -23,18 +24,19 @@ ControlPanel {
 
     ControlEntry {
         padding: 8px;
-        background-color: #fbf4e9;
         margin-bottom: 2px;
         border-radius: 20px;
 
         .name {
             margin-right: 4px;
-            border-right: 2px solid rgba(234, 46, 80, 1);
             padding-right: 4px;
-            font-weight: 600;
+            font-family: Nunito-Black;
+            font-size: 18px;
+            width: 150px;
         }
 
         .description {
+            font-size: 14px;
         }
     }
 }
