Get platformer playable

--- a/code/UI/Base/Chatbox/PlatformerChatEntry.razor
+++ b/code/UI/Base/Chatbox/PlatformerChatEntry.razor
@@ -39,7 +39,7 @@
 
 	public string PlayerClasses()
 	{
-		if ( Local.PlayerId != PlayerId ) return "not-me";
+		if ( Local.SteamId != PlayerId ) return "not-me";
 		return "";
 	}
 
